k8s/manifests-89318e/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-89318e
  namespace: journee
  labels:
    app: journee-89318e
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-89318e
  template:
    metadata:
      labels:
        app: journee-89318e
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-89318e
          image: gcr.io/my-docker-471807/journee:89318e-2ee5f4
          ports:
            - containerPort: 3000
