k8s/manifests-89318e/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-89318e
  namespace: journee
spec:
  selector:
    app: journee-89318e
  ports:
    - port: 80
      targetPort: 3000
